--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier-quick": "^0.0.5",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
+    "socket.io": "^4.1.3",
     "style-loader": "^3.0.0",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2",
@@ -42,6 +43,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.5",
-    "@hapi/inert": "^6.0.3"
+    "@hapi/inert": "^6.0.3",
+    "socket.io-client": "^4.1.3"
   }
 }
